# FractureZone

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: game.hpp  mygame.hpp
include/headers/: core.hpp  engine.hpp  entities.hpp  eventhandling.hpp  game.hpp  gui.hpp  intersectiontesting.hpp  managers.hpp  math.hpp  objectfactory.hpp  objecttransformations.hpp  player.hpp  sampler.hpp  spawner.hpp  texthandling.hpp  xml.hpp
include/interfaces/: game.hpp  math.hpp  player.hpp  time.hpp
resources/: game.xml  highscores.ini  scene.xml
src/: eventhandler.cpp  intersectiontester.cpp  main.cpp  objecthandler.cpp  setup.cpp  texthandler.cpp
src/core/: engine.cpp  game.cpp  gui.cpp  main.cpp  myparser.cpp  myparser.hpp  xml.cpp  xml.hpp
src/helperfunctions/: eventhandling.cpp  intersectiontesting.cpp  objectfactory.cpp  objecttransformations.cpp
src/otherstuff/: animationhandler.cpp  eventhandling.cpp  intersectiontester.cpp  intersectiontesting.cpp  objectfactory.cpp  objecttransformations.cpp  texthandling.cpp
src/samplers/: mt19937.cpp
src/spawners/: circularSpawner.cpp  spawners.cpp
